<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/content_editText1"/>
    <EditText
        android:id="@+id/editText_1"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/content_editText2"/>
    <EditText
        android:id="@+id/editText_2"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content_op"
        android:layout_marginTop="10dp"
        android:gravity="start" />
    <Spinner
        android:id="@+id/spinner_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/content_btn_calcular"
        android:textColorHint="@color/design_default_color_on_primary"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content_textView_results"
        android:layout_marginTop="10dp"
        android:gravity="start" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/textView_Results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30dp"/>
    </androidx.cardview.widget.CardView>



</LinearLayout>